Imported Debian patch 1.2.3-2

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -62,6 +62,6 @@ msgid ""
 "this package remotely on another port, you should not choose this option, "
 "and later edit /etc/default/ferm to enable ferm."
 msgstr ""
-"La configuración por omisión permite el acceso por SSH a través del puerto 22;"
-" Si está intalando esta paquete remotamente a través de otro puerto, no debería"
-" elegir esta opción, y más tarde para activar ferm, edite «/etc/default/ferm»."
+"La configuración predeterminada permite el acceso por SSH a través del puerto 22;"
+" Si está instalando este paquete remotamente a través de otro puerto, no debería"
+" elegir esta opción, edite más tarde «/etc/default/ferm» para activarlo."
