--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ferm (1.2.3-2) unstable; urgency=low
+
+  * Update spanish debconf translation (Closes: #412178)
+  * create directory /var/cache/ferm
+  * Add portuguese translation (Closes: #415630)
+
+ -- Alexander Wirt <formorer@debian.org>  Sun, 15 Apr 2007 01:59:41 +0200
+
 ferm (1.2.3-1) unstable; urgency=low
 
   [ Max Kellermann ]
