--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ferm (2.0.3-2) unstable; urgency=low
+
+  [ Max Kellermann ]
+  * added Finnish po translation (Closes: #501939)
+
+ -- Alexander Wirt <formorer@debian.org>  Wed, 15 Oct 2008 08:46:17 +0200
+
 ferm (2.0.3-1) unstable; urgency=low
 
   [ Max Kellermann ]
