--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2\n"
 "Report-Msgid-Bugs-To: ferm-maintainers@ned.snow-crash.org\n"
-"POT-Creation-Date: 2006-09-25 22:39+0200\n"
+"POT-Creation-Date: 2006-09-25 22:40+0200\n"
 "PO-Revision-Date: 2006-09-25 22:43+0200\n"
 "Last-Translator: Alexander Wirt <formorer@debian.org>\n"
 "Language-Team: ferm-maintainers@ned.snow-crash.org\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,4 +37,7 @@ msgid ""
 "The default configuration allows SSH login on port 22; if you are installing "
 "this package remotely on another port, you should not choose this option, "
 "and later edit /etc/default/ferm to enable ferm."
-msgstr "Die Standardkonfiguration beschränkt den Zugang auf SSH (Port 22); wenn Ihr SSH Dienst auf einem anderen Port läuft, sollten Sie diese Option nicht wählen und später /etc/default/ferm manuell editieren um ferm zu aktivieren. "
+msgstr ""
+"Die Standardkonfiguration beschränkt den Zugang auf SSH (Port 22); wenn Ihr "
+"SSH Dienst auf einem anderen Port läuft, sollten Sie diese Option nicht "
+"wählen und später /etc/default/ferm manuell editieren um ferm zu aktivieren. "
