--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-04-29 12:42+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
 "Language-Team: debian-l10n-dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,11 +27,18 @@ msgstr "Wilt u ferm activeren tijdens het opstarten van het systeem?"
 #. Description
 #: ../ferm.templates:1001
 msgid "Ferm can load firewall rules on every bootup from /etc/ferm/ferm.conf."
-msgstr "Ferm kan firewall-regels laden van /etc/ferm/ferm.conf bij elke systeemstart."
+msgstr ""
+"Ferm kan firewall-regels laden van /etc/ferm/ferm.conf bij elke systeemstart."
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
-msgid "The default configuration allows SSH login on port 22; if you are installing this package remotely on another port, you should not choose this option, and later edit /etc/default/ferm to enable ferm."
-msgstr "De standaardconfiguratie laat aanmelden via SSH op poort 22 toe; als u dit pakket van op afstand via een andere poort installeert slaat u deze optie best af, om dan later ferm te activeren door /etc/default/ferm handmatig aan te passen."
-
+msgid ""
+"The default configuration allows SSH login on port 22; if you are installing "
+"this package remotely on another port, you should not choose this option, "
+"and later edit /etc/default/ferm to enable ferm."
+msgstr ""
+"De standaardconfiguratie laat aanmelden via SSH op poort 22 toe; als u dit "
+"pakket van op afstand via een andere poort installeert slaat u deze optie "
+"best af, om dan later ferm te activeren door /etc/default/ferm handmatig aan "
+"te passen."
