--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -1,17 +1,17 @@
-# Czech translation of ferm debconf messages.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Danish translation ferm.
+# Copyright (C)ferm & nedenstående oversættere.
 # This file is distributed under the same license as the ferm package.
-# Miroslav Kure <kurem@debian.cz>, 2006.
+# Joe Hansen (joedalton2@yahoo.dk), 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ferm\n"
 "Report-Msgid-Bugs-To: ferm-maintainers@ned.snow-crash.org\n"
 "POT-Creation-Date: 2006-09-25 22:40+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
-"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
-"Language: cs\n"
+"PO-Revision-Date: 2011-05-13 18:30+01:00\n"
+"Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
+"Language-Team: Danish <debian-l10n-danish@lists.debian.org>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,15 +20,14 @@ msgstr ""
 #. Description
 #: ../ferm.templates:1001
 msgid "Enable ferm on bootup?"
-msgstr "Povolit ferm při zavádění systému?"
+msgstr "Aktiver ferm ved opstart?"
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
 msgid "Ferm can load firewall rules on every bootup from /etc/ferm/ferm.conf."
 msgstr ""
-"Ferm může při každém startu systému nahrát pravidla firewallu ze souboru /"
-"etc/ferm/ferm.conf."
+"Ferm kan indlæse brandmursregler ved hver opstart fra /etc/ferm/ferm.conf."
 
 #. Type: boolean
 #. Description
@@ -38,6 +37,6 @@ msgid ""
 "this package remotely on another port, you should not choose this option, "
 "and later edit /etc/default/ferm to enable ferm."
 msgstr ""
-"Výchozí konfigurace umožňuje přihlášení přes SSH na portu 22. Instalujete-li "
-"tento balík vzdáleně přes jiný port, měli byste nyní tuto možnost zamítnout "
-"a později povolit ferm úpravou souboru /etc/default/ferm."
+"Standardkonfigurationen tillader SSH-logind på port 22; hvis du installerer "
+"denne pakke eksternt på en anden port, skal du ikke vælge denne indstilling, "
+"men senere redigere /etc/default/ferm for at aktivere ferm."
