--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -6,6 +6,7 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22,11 +23,18 @@ msgstr "Käynnistetäänkö ferm käynnistettäessä tietokone?"
 #. Description
 #: ../ferm.templates:1001
 msgid "Ferm can load firewall rules on every bootup from /etc/ferm/ferm.conf."
-msgstr "Ferm voi ladata palomuurisäännöt tiedostosta /etc/ferm/ferm.conf jokaisen käynnistyksen yhteydessä."
+msgstr ""
+"Ferm voi ladata palomuurisäännöt tiedostosta /etc/ferm/ferm.conf jokaisen "
+"käynnistyksen yhteydessä."
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
-msgid "The default configuration allows SSH login on port 22; if you are installing this package remotely on another port, you should not choose this option, and later edit /etc/default/ferm to enable ferm."
-msgstr "Oletusasetukset sallivat SSH-kirjautumiset portissa 22. Jos asennat tätä pakettia etänä toisen portin kautta, älä valitse tätä vaihtoehtoa, vaan muokkaa myöhemmin tiedostoa /etc/default/ferm ottaaksesi fermin käyttöön."
-
+msgid ""
+"The default configuration allows SSH login on port 22; if you are installing "
+"this package remotely on another port, you should not choose this option, "
+"and later edit /etc/default/ferm to enable ferm."
+msgstr ""
+"Oletusasetukset sallivat SSH-kirjautumiset portissa 22. Jos asennat tätä "
+"pakettia etänä toisen portin kautta, älä valitse tätä vaihtoehtoa, vaan "
+"muokkaa myöhemmin tiedostoa /etc/default/ferm ottaaksesi fermin käyttöön."
