--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2006-09-19 13:00+0200\n"
 "Last-Translator: Thomas Huriaux <thomas.huriaux@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
