--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -1,17 +1,18 @@
-# Czech translation of ferm debconf messages.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Debconf translations for ferm.
+# Copyright (C) 2012 THE ferm'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the ferm package.
-# Miroslav Kure <kurem@debian.cz>, 2006.
+# Adriano Rafael Gomes <adrianorg@gmail.com>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ferm\n"
 "Report-Msgid-Bugs-To: ferm-maintainers@ned.snow-crash.org\n"
 "POT-Creation-Date: 2006-09-25 22:40+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
-"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
-"Language: cs\n"
+"PO-Revision-Date: 2012-02-23 19:37-0200\n"
+"Last-Translator: Adriano Rafael Gomes <adrianorg@gmail.com>\n"
+"Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
+"org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,15 +21,15 @@ msgstr ""
 #. Description
 #: ../ferm.templates:1001
 msgid "Enable ferm on bootup?"
-msgstr "Povolit ferm při zavádění systému?"
+msgstr "Habilitar o ferm na inicialização do sistema?"
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
 msgid "Ferm can load firewall rules on every bootup from /etc/ferm/ferm.conf."
 msgstr ""
-"Ferm může při každém startu systému nahrát pravidla firewallu ze souboru /"
-"etc/ferm/ferm.conf."
+"O ferm pode carregar as regras de firewall a cada inicialização do sistema, "
+"a partir de /etc/ferm/ferm.conf."
 
 #. Type: boolean
 #. Description
@@ -38,6 +39,6 @@ msgid ""
 "this package remotely on another port, you should not choose this option, "
 "and later edit /etc/default/ferm to enable ferm."
 msgstr ""
-"Výchozí konfigurace umožňuje přihlášení přes SSH na portu 22. Instalujete-li "
-"tento balík vzdáleně přes jiný port, měli byste nyní tuto možnost zamítnout "
-"a později povolit ferm úpravou souboru /etc/default/ferm."
+"A configuração padrão permite login SSH via porta 22; se você está "
+"instalando esse pacote remotamente via outra porta, você deve rejeitar essa "
+"opção, e mais tarde editar o arquivo /etc/default/ferm para habilitar o ferm."
