--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -11,11 +11,13 @@ msgstr ""
 "PO-Revision-Date: 2009-08-08 21:41+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
@@ -40,7 +42,6 @@ msgid ""
 "and later edit /etc/default/ferm to enable ferm."
 msgstr ""
 "Настройками по умолчанию разрешён доступ по SSH на порту 22; если вы "
-"устанавливаете этот пакет подключившись удалённо по другому порту, "
-"то ответьте отрицательно, и позже отредактируйте "
-"/etc/default/ferm, чтобы включить запуск ferm."
-
+"устанавливаете этот пакет подключившись удалённо по другому порту, то "
+"ответьте отрицательно, и позже отредактируйте /etc/default/ferm, чтобы "
+"включить запуск ferm."
