--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -1,34 +1,34 @@
-# Czech translation of ferm debconf messages.
+# Slovak translation for ferm debconf template.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the ferm package.
-# Miroslav Kure <kurem@debian.cz>, 2006.
+#
+# Ivan Masár <helix84@centrum.sk>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ferm\n"
 "Report-Msgid-Bugs-To: ferm-maintainers@ned.snow-crash.org\n"
 "POT-Creation-Date: 2006-09-25 22:40+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
-"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
-"Language: cs\n"
+"PO-Revision-Date: 2012-02-24 13:32+0100\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
+"Language-Team: Slovak <debian-l10n-slovak@lists.debian.org>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
 msgid "Enable ferm on bootup?"
-msgstr "Povolit ferm při zavádění systému?"
+msgstr "Zapnúť ferm pri štarte?"
 
 #. Type: boolean
 #. Description
 #: ../ferm.templates:1001
 msgid "Ferm can load firewall rules on every bootup from /etc/ferm/ferm.conf."
 msgstr ""
-"Ferm může při každém startu systému nahrát pravidla firewallu ze souboru /"
-"etc/ferm/ferm.conf."
+"Ferm môže načítať pravidlá firewallu pri každom štarte z /etc/ferm/ferm.conf."
 
 #. Type: boolean
 #. Description
@@ -38,6 +38,6 @@ msgid ""
 "this package remotely on another port, you should not choose this option, "
 "and later edit /etc/default/ferm to enable ferm."
 msgstr ""
-"Výchozí konfigurace umožňuje přihlášení přes SSH na portu 22. Instalujete-li "
-"tento balík vzdáleně přes jiný port, měli byste nyní tuto možnost zamítnout "
-"a později povolit ferm úpravou souboru /etc/default/ferm."
+"Predvolená konfigurácia umožňuje prihlásenie pomocou SSH na porte 22. Ak "
+"tento balík inštalujete vzdialene na inom porte, nemali by ste vybrať túto "
+"voľbu, ale neskôr upraviť /etc/default/ferm a zapnúť ferm."
