Imported Upstream version 1.1

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,13 @@
 Authors of this package
- * Auke Kok <koka@geo.vu.nl>
+ * Auke Kok <auke.kok@planet.nl>
 
 People who contributed to this package
+ * Marc A. Volovic <marc@bard.org.il>
+ * Gergely Tamas <dice@mfa.kfki.hu>
  * Daniel R. Bidwell <bidwell@andrews.edu>
  * Yannick Le Briquer <yannick.lebriquer@anakeen.com>
  * John Auer <jaa@aeronix.com>
- * Klaus lichtenwalder <k.lichtenwalder@computer.org>
+ * Klaus Lichtenwalder <k.lichtenwalder@computer.org>
  * Friedrich Lobenstock <fl@fl.priv.at>
  * Nick K. Kozubsky <suse@ray.ru>
  * Tommi Virtanen <tv@debian.org>
@@ -18,6 +20,16 @@ People who contributed to this package
  * Andras Korn <korn@chardonnay.math.bme.hu>
  * Brian Manning <luckyy@luckyy.com>
  * Kelly Martin <kmartin@pyrzqxgl.org>
+ * David Coe <davidc@debian.org>
+ * Thomas Zeeman <tjzeeman@cs.vu.nl>
+ * Matthias Zeeman <zeem@bio.vu.nl>
+ * Leonard Michlmayr <Leonard.Michlmayr@ap.univie.ac.at>
+ * Dave Baker <dave@dsb3.com>
+ * Wolf-Agathon Schal <schaly_wolf-agathon@t-online.de>
+ * Boris Zentner <boris@m2b.de>
+ * Florian Friesdorf <42ff@gmx.net>
+ * Julien Soula <Julien.Soula@lifl.fr>
+
 
 And many, many more...
 
