--- a/CHANGES
+++ b/CHANGES
@@ -3,11 +3,39 @@
 
     version history for ferm
 
-    Auke Kok <koka@geo.vu.nl>
+    Auke Kok <auke.kok@planet.nl>
+
+
+v1.1 - 5 May 2003
+  - Removed 'mark' as possible target due to nameclash
+  - Fixed typo in tos values with missing space
+  - Added support for shell escapes
+  - Updated manual page
+  - Fixed bug with ! before variable lists
+  - Added support for multiple variables inside a value
+  - Changed variable character from '$' to '%' to allow system variables
+  - Split up the pod stuff from the ferm source
+  - Fixed word splitter to more a serious approach
+  - Removed internal proxy variable, replaced with 'to' and 'toports' for clearity
+  - Removed the 'relaxed' option, for it wasn't used at it's potential (once)
+  - Added location option for the meek
+  - Have ferm prescan input to look for the kernel program and location
+  - Modified $(DOCDIR) to /usr/share/doc/ferm
+  - Added debug (--debug or -d) parameter for even more output
+  - Added --length,ttl, ttl[set|inc|dec] and ttl-[eq|lt|gt],
+    --[every|counter|start|packet], --average, --pkt-type, --string
+    --time[start|stop] and --days, ip-limit-[above|mask]
+    --psd-[weight-threshold|delay-threshold|[lo|hi]-ports-weight]
+    --to-[source|ports|destination], --set-ftos 
+  - Added BALANCE, FTOS, SAME, TCPMSS targets and more
+  - Fixed bug on log/goto combination (missing space) -debian bugs
+  - Allow lists in set statements -debian bugs
+  - Added several patches from misc sources (thanks everyone)
+  - Cleaned up order of builtin targets (now alphabetically ordered)
 
 
 v1.0pl8 - 13 july 2001
-  - Fixed nonexistent parameters for log-[ip|tcp]-...
+  - Fixed nonexistent parameter values for log-[ip|tcp]-...
   - Made keyword pattern matching strict, better for finding typo's
   - Added NOP action (for match-counting)
   - Added option automodule for automaticly loading correct modules
