--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,25 @@
     Max Kellermann <max@foo-projects.org>
 
 
+v1.2.1 - 25 Sep 2006
+  - bugfix: reset domains after all rules were parsed and don't forget to
+    reset a table; this bug only affects users who run ferm on a remote
+    machine
+  - reset policy on all guessed built-in chains if no authoritative
+    information about built-in chains is available
+  - support netfilter modules: condition, fuzzy, hbh, hl, ipv6header, rt,
+    quota, HL
+  - extended module support
+    * ah now supports the IPv6 options
+  - added missing documentation
+    * target ECN
+    * match modules: dst, eui64, frag
+  - disabled array after ttl-lt, ttl-gt
+  - allow "length", "physdev", "tos" negation
+  - translate sports, dports to source-ports, destination-ports in import-ferm
+  - added the "--remote" option
+
+
 v1.2 - 13 Sep 2006
   - import-ferm runs iptables-save if no input file is provided
 
