--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -587,6 +587,12 @@ Checks the SPI header in an AH packet.
     mod ah ahspi 0x101;
     mod ah ahspi ! 0x200:0x2ff;
 
+Additional arguments for IPv6:
+
+    mod ah ahlen 32 ACCEPT;
+    mod ah ahlen !32 ACCEPT;
+    mod ah ahres ACCEPT;
+
 =item B<comment>
 
 Adds a comment of up to 256 characters to a rule, without an effect.
@@ -594,6 +600,14 @@ Note that unlike ferm comments ('#'), this one will show up in
 "iptables -L".
 
     mod comment comment "This is my comment." ACCEPT;
+
+=item B<condition>
+
+Matches if a value in /proc/net/ipt_condition/NAME is 1 (path is
+/proc/net/ip6t_condition/NAME for the ip6 domain).
+
+    mod condition condition (abc def) ACCEPT;
+    mod condition condition !foo ACCEPT;
 
 =item B<connmark>
 
@@ -636,6 +650,14 @@ Match the 6 bit DSCP field within the TOS field.
     mod dscp dscp 11;
     mod dscp dscp-class AF41;
 
+=item B<dst>
+
+Matches the Destination Options header (ip6).
+
+    mod dst dst-len 8 ACCEPT;
+    mod dst dst-len !8 ACCEPT;
+    mod dst dst-opts (1:4 2:8) ACCEPT;
+
 =item B<ecn>
 
 Match the ECN bits of an IPv4 TCP header.
@@ -652,6 +674,51 @@ Checks the SPI header in an ESP packet.
 
     mod esp espspi 0x101;
     mod esp espspi ! 0x200:0x2ff;
+
+=item B<eui64>
+
+"This module matches the EUI-64 part of a stateless autoconfigured
+IPv6 address.  It compares the EUI-64 derived from the source MAC
+address in Ehternet frame with the lower 64 bits of the IPv6 source
+address.  But "Universal/Local" bit is not compared.  This module
+doesn't match other link layer frame, and is only valid in the
+PREROUTING, INPUT and FORWARD chains."
+
+    mod eui64 ACCEPT;
+
+=item B<frag>
+
+Matches the Fragment header (ip6).
+
+    mod frag fragid 123:456 ACCEPT;
+    mod frag fragid !123:456 ACCEPT;
+    mod frag fragres ACCEPT;
+    mod frag fragfirst ACCEPT;
+    mod frag fragmore ACCEPT;
+    mod frag fraglast ACCEPT;
+
+=item B<fuzzy>
+
+"This module matches a rate limit based on a fuzzy logic controller [FLC]."
+
+    mod fuzzy lower-limit 10 upper-limit 20 ACCEPT;
+
+=item B<hbh>
+
+Matches the Hop-by-Hop Options header (ip6).
+
+    mod hbh hbh-len 8 ACCEPT;
+    mod hbh hbh-len !8 ACCEPT;
+    mod hbh hbh-opts (1:4 2:8) ACCEPT;
+
+=item B<hl>
+
+Matches the Hop Limit field (ip6).
+
+    mod hl hl-eq (8 10) ACCEPT;
+    mod hl hl-eq !5 ACCEPT;
+    mod hl hl-gt 15 ACCEPT;
+    mod hl hl-lt 2 ACCEPT;
 
 =item B<helper>
 
@@ -677,12 +744,20 @@ Match a range of IPv4 addresses.
     mod iprange src-range 192.168.2.0-192.168.3.255;
     mod iprange dst-range ! 192.168.6.0-192.168.6.255;
 
+=item B<ipv6header>
+
+Matches the IPv6 extension header (ip6).
+
+    mod ipv6header header !(hop frag) ACCEPT;
+    mod ipv6header header (auth dst) ACCEPT;
+
 =item B<length>
 
 Check the package length.
 
     mod length length 128; # exactly 128 bytes
     mod length length 512:768; # range
+    mod length length ! 256; # negated
 
 =item B<limit>
 
@@ -774,6 +849,12 @@ Detect TCP/UDP port scans.
     mod psd psd-weight-threshold 21 psd-delay-threshold 300
       psd-lo-ports-weight 3 psd-hi-ports-weight 1 DROP;
 
+=item B<quota>
+
+Implements network quotas by decrementing a byte counter with each packet.
+
+    mod quota quota 65536 ACCEPT;
+
 =item B<random>
 
 Match a random percentage of all packets.
@@ -802,6 +883,16 @@ a match module, it has target-like behaviour when using the "set"
 keyword.
 
 L<http://snowman.net/projects/ipt_recent/>
+
+=item B<rt>
+
+Match the IPv6 routing header (ip6 only).
+
+    mod rt rt-type 2 rt-len 20 ACCEPT;
+    mod rt rt-type !2 rt-len !20 ACCEPT;
+    mod rt rt-segsleft 2:3 ACCEPT;
+    mod rt rt-segsleft !4:5 ACCEPT;
+    mod rt rt-0-res rt-0-addrs (::1 ::2) rt-0-not-strict ACCEPT;
 
 =item B<sctp>
 
@@ -864,7 +955,8 @@ Type "iptables -m time -h" for details.
 
 Matches a packet on the specified TOS-value.
 
-    mod tos tos Minimize-Cost;
+    mod tos tos Minimize-Cost ACCEPT;
+    mod tos tos !Normal-Service ACCEPT;
 
 Type "iptables -m tos -h" for details.
 
@@ -899,6 +991,21 @@ Change the destination address of the packet.
     DNAT to 10.0.0.4:80;
     DNAT to 10.0.0.4:1024-2048;
     DNAT to 10.0.1.1-10.0.1.20;
+
+=item B<ECN>
+
+This target allows to selectively work around known ECN blackholes.
+It can only be used in the mangle table.
+
+    ECN ecn-tcp-remove;
+
+=item B<HL>
+
+Modify the IPv6 Hop Limit field (ip6/mangle only).
+
+    HL hl-set 5;
+    HL hl-dec 2;
+    HL hl-inc 1;
 
 =item B<LOG>
 
@@ -1128,6 +1235,20 @@ Ferm function make routine tasks quick and easy:
     &FORWARD_TCP(tcp, smtp, 192.168.1.3);
     &FORWARD_TCP((tcp udp), domain, 192.168.1.4);
 
+=head2 Remote B<ferm>
+
+If the target machine is not able to run B<ferm> for some reason
+(maybe an embedded device without Perl), you can edit the B<ferm>
+configuration file on another computer and let B<ferm> generate a
+shell script there.
+
+Example for OpenWRT:
+
+    ferm --remote --shell mywrt/ferm.conf >mywrt/firewall.user
+    chmod +x mywrt/firewall.user
+    scp mywrt/firewall.user mywrt.local.net:/etc/
+    ssh mywrt.local.net /etc/firewall.user
+
 =head1 TRANSITION FROM FERM 1.1
 
 ferm 1.2 aims to be 100% compatible with ferm 1.1, i.e. old
@@ -1222,6 +1343,11 @@ with this option due to quoting bugs.
 
 Generate a shell script which calls iptables-restore(8) and prints it.
 Implies --fast --lines.
+
+=item B<--remote>
+
+Generate rules for a remote machine.  Implies B<--noexec> and
+B<--lines>.  Can be combined with B<--shell>.
 
 =item B<--domain {ip|ip6}>
 
