--- a/doc/ferm.1
+++ b/doc/ferm.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FERM 1"
-.TH FERM 1 "2006-09-25" "ferm 1.2.1" "FIREWALL RULES MADE EASY"
+.TH FERM 1 "2006-11-16" "ferm 1.2.2" "FIREWALL RULES MADE EASY"
 .SH "NAME"
 \&\fBferm\fR \- a firewall rule parser for linux
 .SH "SYNOPSIS"
@@ -669,6 +669,15 @@ ferm tries to keep up with supporting them all. This chapter describes
 modules which are currently supported.
 .Sh "Netfilter match modules"
 .IX Subsection "Netfilter match modules"
+.IP "\fBaccount\fR" 8
+.IX Item "account"
+Account traffic for all hosts in defined network/netmask.  This is one
+of the match modules which behave like a target, i.e. you will mostly
+have to use the \fB\s-1NOP\s0\fR target.
+.Sp
+.Vb 1
+\&    mod account aname mynetwork aaddr 192.168.1.0/24 ashort NOP;
+.Ve
 .IP "\fBaddrtype\fR" 8
 .IX Item "addrtype"
 Check the address type; either source address or destination address.
@@ -1422,6 +1431,15 @@ Support for these has been removed.
 .IX Item "options clearall, flushall, flushchains, createchains"
 All these options are always implied.  There is no option anymore to
 disable them.
+.IP "\fIoption automod\fR" 8
+.IX Item "option automod"
+Automatic module loading is deprecated.  It still works for now, at
+least for modules which were already supported by ferm 1.1, but it is
+expected to be removed in ferm 1.3.
+.IP "\fIoption location\fR" 8
+.IX Item "option location"
+ferm assumes that the iptables utilities are always installed in
+/sbin.
 .IP "\fIChain policies\fR" 8
 .IX Item "Chain policies"
 Chain policies should be written in a dedicated statement; ferm 1.1:
@@ -1450,6 +1468,26 @@ the new syntax:
 \& def $FOO = (http ssh);
 \& chain INPUT proto tcp dport $FOO ACCEPT;
 .Ve
+.IP "\fIArrays\fR" 8
+.IX Item "Arrays"
+Arrays used to be specified with commas separating the items.  In ferm
+1.2, you separate array items only by whitespace.
+.IP "\fIMisc syntax changes\fR" 8
+.IX Item "Misc syntax changes"
+Other small syntax changes:
+.RS 8
+.IP "*" 4
+built-in target names must be upper case; chains are lower case
+.IP "*" 4
+\&\s-1MASQUERADE\s0, not \s-1MASQ\s0
+.IP "*" 4
+A lot of shortcuts are deprecated, since they are polluting the namespace, e.g. \*(L"mac\*(R", \*(L"tosrc\*(R".
+.IP "*" 4
+\&\*(L"source addr \f(CW$A\fR port \f(CW$B\fR\*(R" is deprecated, use \*(L"sdaddr \f(CW$A\fR sport \f(CW$B\fR\*(R"
+instead.  The same for \*(L"destination\*(R".
+.RE
+.RS 8
+.RE
 .SH "OPTIONS"
 .IX Header "OPTIONS"
 .IP "\fB\-\-noexec\fR" 12
