--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,15 @@
     Max Kellermann <max@foo-projects.org>
 
 
+v1.2.3 - 14 Feb 2007
+  - subchains may be named
+  - don't copy module references to subchain (patch by Alex Metelka)
+  - override variables on the command line with "--def"
+  - auto-load modules only when their parameters are used
+  - documentation:
+    * targets MIRROR, NETMAP, NFQUEUE, NOTRACK, QUEUE
+
+
 v1.2.2 - 15 Nov 2006
   - documentation:
     * warn against using iptables 1.2 with import-ferm
