--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,12 @@
     Max Kellermann <max@foo-projects.org>
 
 
+v1.2.5 - 14 Oct 2007
+  - make --flush do something in fast mode (reported by Hans-Georg Bork)
+  - fix automatic protocol modules when used in an expanded array
+    (reported by Ralph Oesker)
+
+
 v1.2.4 - 24 May 2007
   - support netfilter modules:
     * hashlimit
