--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,11 @@
     Max Kellermann <max@foo-projects.org>
 
 
+v1.3.1 - 9 Dec 2007
+  - require IO::Handle, this fixes the interactive mode
+  - configure test mode properly when running on microperl
+
+
 v1.3 - 6 Dec 2007
   - reserve tokens starting with "@" as ferm keywords
   - implemented conditionals with @if/@else
